# micce-search-engine

./: README.md  docker-compose.yml  micce.drawio
indexer/: .gitignore  Dockerfile  README.md  dependency-reduced-pom.xml  go.mod  go.sum  main.go  pom.xml  push-image.sh
indexer/azure/: event_hub_comsumer.go
indexer/cmd/: main.go
indexer/gcp/: gcp_client.go
indexer/internal/: logger.go
indexer/internal/azure/: event_hub_comsumer.go
indexer/internal/service/: index_service.go  read_service.go
indexer/internal/vespa/: document.go
indexer/vespa/: body.go  vespa_client.go  vespa_config.go
one-shot-reader/: pom.xml  run.sh
rdbms-schema/: ddl.sql
reader/: .gitignore  Dockerfile  README.md  dependency-reduced-pom.xml  go.mod  go.sum  main.go  pom.xml  push-image.sh
reader-go/: go.mod  go.sum  main.go
reader-go/firestore/: firestore_client.go
reader-go/gcp/: gcp_client.go
reader/azure/: event_hub_producer.go
reader/cmd/: main.go
reader/firestore/: document.go
reader/internal/azure/: event_hub_comsumer.go  event_hub_producer.go
reader/time/: time.go
schema/: ddl.sql
search-api/: .env  Dockerfile  README.md  go.mod  go.sum  openapi.yaml  push-image.sh
search-api/cmd/: main.go
search-api/dict/: synonym.csv
search-engine/: hosts.xml  package.sh  services.xml
search-engine/production/: hosts.xml  services.xml
search-engine/schemas/: spot.sd
synonym-data-generator/: README.md  go.mod
synonym-data-generator/cmd/: main.go
synonym-data-generator/internal/: bboltRepository.go
tools/: insert_spot.py  pyproject.toml
(+41 files in other folders)
